--- a/src/views/pages/create-post.ejs
+++ b/src/views/pages/create-post.ejs
@@ -46,14 +46,14 @@
         ></textarea>
       </div>
 
-      <div class="mb-4 flex flex-row items-center gap-4">
-        <input type="checkbox" name="premium" id="summary" />
-        <label
-          for="premium"
-          class="none block text-sm font-medium text-gray-700"
-          >Premium?</label
-        >
+      <div class="mb-4 flex flex-col items-start gap-2">
+        <label class="text-sm font-medium text-gray-900 dark:text-gray-300" for="premium">Premium?</label>
+        <label class="inline-flex items-center cursor-pointer">
+          <input type="checkbox" id="premium" class="sr-only peer" />
+          <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-purple-300 dark:peer-focus:ring-purple-800 peer-checked:bg-purple-600 peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-0.5 after:left-0.5 after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all"></div>
+        </label>
       </div>
+      
 
       <div class="mb-4">
         <label
