--- a/src/views/pages/admin-users.ejs
+++ b/src/views/pages/admin-users.ejs
@@ -160,7 +160,7 @@
     </details>
     <% }) %>
     <button id="adduseregoryBtn" class="px-4 py-2 bg-blue-500 text-white rounded shadow hover:bg-blue-600">
-      Add useregory
+      Add User
     </button>
   
      <!-- Modal -->
@@ -177,35 +177,34 @@
               align-items: center;"
      >
       <div class="bg-white w-96 rounded-lg shadow-lg p-6">
-        <h2 class="text-lg font-bold mb-4">Add useregory</h2>
+        <h2 class="text-lg font-bold mb-4">Add user</h2>
         
-        <!-- useregory Name -->
+        <!-- user Name -->
         <div class="mb-4">
-          <label for="useregoryName" class="block text-sm font-medium text-gray-700">useregory Name</label>
-          <input type="text" id="useregoryName" placeholder="Enter useregory name" 
+          <label for="userName" class="block text-sm font-medium text-gray-700">User Name</label>
+          <input type="text" id="userName" placeholder="Enter User name" 
+                 class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+        </div>
+
+        <!-- user Email -->
+        <div class="mb-4">
+          <label for="userEmail" class="block text-sm font-medium text-gray-700">User Email</label>
+          <input type="text" id="userEmail" placeholder="Enter User email" 
                  class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
         </div>
         
-        <!-- Subuseregory Count -->
+        <!-- user clearance -->
         <div class="mb-4">
-          <label for="subuseregoryCount" class="block text-sm font-medium text-gray-700">Number of Subuseregories</label>
+          <label for="subuseregoryCount" class="block text-sm font-medium text-gray-700">Enter User clearance</label>
           <select id="subuseregoryCount" 
                   class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
             <option value="0">Select</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
+            <option value="3">4</option>
           </select>
         </div>
-  
-        <!-- Subuseregories -->
-        <div id="subuseregories" class="space-y-4"></div>
         
         <!-- Actions -->
         <div class="mt-6 flex justify-end space-x-4">
