--- a/src/views/pages/admin-categories.ejs
+++ b/src/views/pages/admin-categories.ejs
@@ -1,4 +1,5 @@
 <div class="mx-auto my-8 flex w-full max-w-screen-lg flex-col gap-4">
+  <a href="/admin" class="my-4 text-blue-500 underline">Back</a>
   <h1 class="text-2xl font-semibold">Manage Categories</h1>
 
   <%- include('../components/error-dialog.ejs') %> <%-
